@@ -1,1 +1,8 @@
 tagError=An error occurred while tagging the topic.
+
+badLogin=Login error! Maybe your password was incorrect? Try it again.
+manualLoginRequired=There have been multiple unsuccessful login attempts from \
+your current IP address or against the account you are attempting to log in \
+to. Please log in manually instead of with GameFOX.
+cookieEaten=Somebody ate the cookie! This means that something unexpected \
+happened. Try it again.
